// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TimeLineItem with  end 1`] = `
<svg
  height={66}
  width={20}
>
  <g>
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={0}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={11}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={22}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={33}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={44}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={55}
    />
  </g>
</svg>
`;

exports[`renders TimeLineItem with no end 1`] = `
<svg
  height={99}
  width={20}
>
  <g>
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={0}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={11}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={22}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={33}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={44}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={55}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={66}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={77}
    />
    <rect
      fill="#FF6666"
      height="10"
      width={10}
      x={0}
      y={88}
    />
  </g>
</svg>
`;
